# control-plane/rest/service/src/v0/volumes.rs
@@ -1,5 +1,6 @@
 use super::*;
 use grpc::operations::{volume::traits::VolumeOperations, MaxEntries, Pagination, StartingToken};
+use rest_client::versions::v0::models::VolumeSnapshot;
 use stor_port::types::v0::{
     openapi::apis::Uuid,
     transport::{
@@ -149,6 +150,12 @@ impl apis::actix_server::Volumes for RestApi {
             )
             .await?;
         Ok(share_uri)
+    }
+
+    async fn put_volume_snapshot(
+        Path((_volume_id, _snapshot_name)): Path<(Uuid, String)>,
+    ) -> Result<VolumeSnapshot, RestError<RestJsonError>> {
+        Err(ReplyError::unimplemented("Snapshot creation is not implemented".to_string()).into())
     }
 
     async fn put_volume_target(
